# FastAI

./: CONTRIBUTING.md  README.md  example.env  pyproject.toml  ruff.toml
src/: main.py  mock_html.py
src/frontend/: index.html
src/frontend/assets/: index-Dl82GzTx.js  index-tGFbROaR.css
src/static/: frontend-settings.json
