[project]
name = "FastAI"
version = "0.1.0"
description = "FastAI Repository for backend developers."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "editorconfig-checker==3.2.1",
    "fastapi[standard]==0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "ruff==0.11.13",
]
